# llm_from_scratch

./: .gitignore  README.md  byte_pair_encoding.ipynb  ch01_byte_pair_encoding.ipynb  ch01_simple_tokenizer.ipynb  ch03_attention.ipynb  ch04_gpt_model.ipynb  ch05_pretraining.ipynb  ch07_fine_tunning.ipynb  chat.py  gpt.py  pyproject.toml  verdict.ipynb
tests/: Pytorch.ipynb  teste.ipynb
