[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy<2",
    "tensorflow>=2.15.0",
    "tiktoken>=0.8.0",
    "torch==2.4.0",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "uv>=0.5.26",
]
